--- a/food.html
+++ b/food.html
@@ -56,55 +56,210 @@
     </section>
     <section id="con2">
       <img class="stripeTop" src="img/stripe.jpg" />
-      <h2>SALAD</h2>
-      <p>IN HERE, IT'S ALWAYS FRIDAY</p>
-      <div class="menu">
-        <img src="img/food_salad1.png" />
-        <h3>치킨 시저 샐러드</h3>
-        <h4>Chicken Caesar Salad</h4>
-        <p>
-          신선한 샐러드와 치킨 큐브, 크루통이 수제 시저드레싱과 어우러진<br />티지아이
-          프라이데이스 치킨 시저 샐러드
-        </p>
-        <div>18,800원</div>
+      <div class="saladWrap">
+        <h2>SALAD</h2>
+        <p>IN HERE, IT'S ALWAYS FRIDAY</p>
+        <div class="menu">
+          <img src="img/food_salad1.png" />
+          <h3>치킨 시저 샐러드</h3>
+          <h4>Chicken Caesar Salad</h4>
+          <p>
+            신선한 샐러드와 치킨 큐브, 크루통이 수제 시저드레싱과 어우러진<br />티지아이
+            프라이데이스 치킨 시저 샐러드
+          </p>
+          <div>18,800원</div>
+        </div>
+        <div class="menu">
+          <img src="img/food_salad2.png" />
+          <h3>하베스트 망고 치킨 샐러드</h3>
+          <h4>Harvest Mango Chicken Salad</h4>
+          <p>
+            신선한 시금치와 그릴에 구운 닭가슴살, 캔디드 피칸, 망고 살사를<br />허니
+            머스타드 드레싱과 함께 즐기는 샐러드
+          </p>
+          <div>20,900원</div>
+        </div>
+        <div class="menu">
+          <img src="img/food_salad3.png" />
+          <h3>콥 샐러드</h3>
+          <h4>Cobb Salad</h4>
+          <p>
+            신선한 샐러드와 그릴에 구운 닭가슴살, 베이컨, 콜비 치즈,<br />아보카도,
+            계란 등이 핫 베이컨 드레싱과 어우러진<br />티지아이 프라이데이스
+            스타일의 콥 샐러드
+          </p>
+          <div>21,900원</div>
+        </div>
+        <div class="menu">
+          <img src="img/food_salad4.png" />
+          <h3>케이준 프라이드 치킨 샐러드</h3>
+          <h4>Cajun Fried Chicken Salad</h4>
+          <p>
+            신선한 베지터블 믹스와 멕시칸 치즈, 케이준 스파이스 치킨으로<br />맛을
+            더한 프라이데이스 시그니처 샐러드
+          </p>
+          <div>23,900원</div>
+        </div>
+        <div class="notice">
+          <p>
+            ※모든 메뉴의 이미지는 실제와 다를 수 있으며, 일부 메뉴는 매장별로
+            운영이 다를 수 있습니다.
+          </p>
+          <p>※모든 메뉴의 원산지는 [원산지 안내] 페이지에서 확인 가능합니다.</p>
+        </div>
       </div>
-      <div class="menu">
-        <img src="img/food_salad2.png" />
-        <h3>하베스트 망고 치킨 샐러드</h3>
-        <h4>Harvest Mango Chicken Salad</h4>
-        <p>
-          신선한 시금치와 그릴에 구운 닭가슴살, 캔디드 피칸, 망고 살사를<br />허니
-          머스타드 드레싱과 함께 즐기는 샐러드
-        </p>
-        <div>20,900원</div>
+      <div class="pastaWrap">
+        <h2>PASTA & RICE</h2>
+        <p>IN HERE, IT'S ALWAYS FRIDAY</p>
+        <div class="menu">
+          <img src="img/food_pasta1.png" />
+          <h3>케이준 치킨&슈림프 파스타</h3>
+          <h4>Cajun Chicken & Shrimp Pasta</h4>
+          <p>
+            진한 크림 소스에 부드럽게 구운 닭가슴살과<br />새우가 어우러진 크림
+            파스타
+          </p>
+          <div>22,900원</div>
+        </div>
+        <div class="menu">
+          <img src="img/food_pasta2.png" />
+          <h3>브루클린 크림 파스타</h3>
+          <h4>Brooklyn Cream Pasta</h4>
+          <p>
+            정통 소세지를 넣어 통후추로 맛을 낸<br />고소하고 진한 맛이 나는
+            파스타
+          </p>
+          <div>24,900원</div>
+        </div>
+        <div class="menu">
+          <img src="img/food_pasta3.png" />
+          <h3>김치 & 아보 필라프</h3>
+          <h4>Kimchi & Avo Pilaf</h4>
+          <p>
+            새콤한 김치와 저염 베이컨을 함께 볶아 감칠맛 나는 라이스와<br />으깬
+            아보카도, 계란 프라이를 함께 즐기는 스페셜 라이스
+          </p>
+          <div>19,800원</div>
+        </div>
+        <div class="menu">
+          <img src="img/food_pasta4.png" />
+          <h3>프라이데이스 찹 스테이크 위드 라이스</h3>
+          <h4>Friday's Chopped Steak with Rice</h4>
+          <p>
+            직화에 구운 다진 쇠고기 패티에 시그니처 소스를 곁들인<br />찹
+            스테이크를 함께 즐기는 라이스
+          </p>
+          <div>25,900원</div>
+        </div>
+        <div class="notice">
+          <p>
+            ※모든 메뉴의 이미지는 실제와 다를 수 있으며, 일부 메뉴는 매장별로
+            운영이 다를 수 있습니다.
+          </p>
+          <p>※모든 메뉴의 원산지는 [원산지 안내] 페이지에서 확인 가능합니다.</p>
+        </div>
       </div>
-      <div class="menu">
-        <img src="img/food_salad3.png" />
-        <h3>콥 샐러드</h3>
-        <h4>Cobb Salad</h4>
-        <p>
-          신선한 샐러드와 그릴에 구운 닭가슴살, 베이컨, 콜비 치즈,<br />아보카도,
-          계란 등이 핫 베이컨 드레싱과 어우러진<br />티지아이 프라이데이스
-          스타일의 콥 샐러드
-        </p>
-        <div>21,900원</div>
+      <div class="burgerWrap">
+        <h2>BURGER</h2>
+        <p>IN HERE, IT'S ALWAYS FRIDAY</p>
+        <div class="menu">
+          <img src="img/food_burger1.png" />
+          <h3>크리스피 치킨 수제 버거</h3>
+          <h4>Crispy Chicken Homemade Burger</h4>
+          <p>
+            바삭하게 튀긴 두툼한 통닭다리살, 코울슬로가 들어간 에그 타르타르,<br />아메리칸
+            치즈, TGIF 특제 소스를 부드러운 브리오슈 번과 함께<br />즐기는
+            크리스피 치킨 수제 버거
+          </p>
+          <div>15,800원</div>
+        </div>
+        <div class="menu">
+          <img src="img/food_burger2.png" />
+          <h3>프라이데이스 글레이즈드 버거</h3>
+          <h4>Friday's Glazed Burger</h4>
+          <p>
+            두툼한 패티에 티지아이 프라이데이스의<br />시그니처 소스를 바른
+            프라이데이스 버거
+          </p>
+          <div>18,900원</div>
+        </div>
+        <div class="menu">
+          <img src="img/food_burger3.png" />
+          <h3>클래식 베이컨 & 치즈 버거</h3>
+          <h4>Classic Bacon & Cheese Burger</h4>
+          <p>두툼한 패티와 트리플 체다소스가 가득한<br />베이컨 치즈 버거</p>
+          <div>21,900원</div>
+        </div>
+        <div class="menu">
+          <img src="img/food_burger4.png" />
+          <h3>얼티밋 시그니처 글레이즈드 버거</h3>
+          <h4>Ultimate Signature Glazed Burger</h4>
+          <p>
+            프라이데이스 시그니처 소스를 바른 두툼한 패티 2장과<br />프로볼로네
+            치즈, 토마토, 베이컨 등을 함께 즐기는<br />티지아이 프라이데이스만의
+            더블사이즈 시그니처 버거
+          </p>
+          <div>25,900원</div>
+        </div>
+        <div class="notice">
+          <p>
+            ※모든 메뉴의 이미지는 실제와 다를 수 있으며, 일부 메뉴는 매장별로
+            운영이 다를 수 있습니다.
+          </p>
+          <p>※모든 메뉴의 원산지는 [원산지 안내] 페이지에서 확인 가능합니다.</p>
+        </div>
       </div>
-      <div class="menu">
-        <img src="img/food_salad4.png" />
-        <h3>케이준 프라이드 치킨 샐러드</h3>
-        <h4>Cajun Fried Chicken Salad</h4>
-        <p>
-          신선한 베지터블 믹스와 멕시칸 치즈, 케이준 스파이스 치킨으로<br />맛을
-          더한 프라이데이스 시그니처 샐러드
-        </p>
-        <div>23,900원</div>
-      </div>
-      <div class="notice">
-        <p>
-          ※모든 메뉴의 이미지는 실제와 다를 수 있으며, 일부 메뉴는 매장별로
-          운영이 다를 수 있습니다.
-        </p>
-        <p>※모든 메뉴의 원산지는 [원산지 안내] 페이지에서 확인 가능합니다.</p>
+      <div class="grillWrap">
+        <h2>BURGER</h2>
+        <p>IN HERE, IT'S ALWAYS FRIDAY</p>
+        <div class="menu">
+          <img src="img/food_grill1.png" />
+          <h3>시그니처 립 & 슈림프</h3>
+          <h4>Signature Rib & Shrimp</h4>
+          <p>
+            시그니처 립과 바삭하게 튀겨낸 케이준 슈림프,<br />프렌치 프라이를
+            함께 즐기는 요리
+          </p>
+          <div>49,500원</div>
+        </div>
+        <div class="menu">
+          <img src="img/food_grill2.png" />
+          <h3>뉴욕 스트립 스테이크</h3>
+          <h4>New York Strip Steak</h4>
+          <p>
+            풍미 가득한 육즙과 티지아이 프라이데이스만의<br />시즈닝으로 맛을
+            더한 뉴욕 주 모양의 고급 채끝 스테이크
+          </p>
+          <div>39,900원</div>
+        </div>
+        <div class="menu">
+          <img src="img/food_grill3.png" />
+          <h3>뉴욕 스트립 스테이크 & 하프 립 콤보</h3>
+          <h4>New Work Strip Steak & Half Rib Combo</h4>
+          <p>
+            풍미 가득한 육즙과 티지아이 프라이데이스만의 시즈닝으로<br />맛을
+            더한 뉴욕 주 모양의 고급 채끝 스테이크와<br />부드럽고 촉촉한
+            립(Half)을 함께 즐기는 스테이크 콤보
+          </p>
+          <div>50,900원</div>
+        </div>
+        <div class="menu">
+          <img src="img/food_grill4.png" />
+          <h3>시그니처 글레이즈드 치킨</h3>
+          <h4>Signature Glazed Chicken</h4>
+          <p>
+            티지아이 프라이데이스 시그니처 소스를 발라 풍미를 더한<br />그릴에
+            구운 닭가슴살 요리
+          </p>
+          <div>25,900원</div>
+        </div>
+        <div class="notice">
+          <p>
+            ※모든 메뉴의 이미지는 실제와 다를 수 있으며, 일부 메뉴는 매장별로
+            운영이 다를 수 있습니다.
+          </p>
+          <p>※모든 메뉴의 원산지는 [원산지 안내] 페이지에서 확인 가능합니다.</p>
+        </div>
       </div>
       <img class="stripeBottom" src="img/stripe.jpg" />
     </section>
