--- a/story.html
+++ b/story.html
@@ -79,10 +79,11 @@
           <div class="txt">
             <h3>1965년 뉴욕 1번가, TGI FRIDAYS의 첫 시작</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              quo illum eos voluptas corrupti esse rem accusamus excepturi.
-              Incidunt nostrum nihil placeat illum nesciunt ad ratione.
-              Assumenda laborum consectetur aut.
+              1965년 봄, 뉴욕의 향수 판매원인 알랜 스틸먼(ALAN STILLMAN)은 1번가
+              63 스트리트에 흰색과 빨간색의 스트라이프로 꾸민 첫 번째 TGI
+              FRIDAYS를 열었습니다. 언제나 편하게 들려 맥주 한 잔 할 수 있었던
+              이곳은 금세 "미혼 남녀들의 HOT PLACE"가 되었고, 전 세계 63개국에
+              1000개가 넘는 세계 최대의 레스토랑이 되었습니다.
             </p>
           </div>
         </li>
@@ -90,10 +91,15 @@
           <img src="img/story_con2_2.JPG" />
           <div class="txt">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              quo illum eos voluptas corrupti esse rem accusamus excepturi.
-              Incidunt nostrum nihil placeat illum nesciunt ad ratione.
-              Assumenda laborum consectetur aut.
+              1992년 3월 1일, 양재동에 한국의 첫 TGI FRIDAYS가 오픈했습니다. TGI
+              FRIDAYS의 등장은 한국 내 새로운 레스토랑의 형태로 센세이션을
+              일으켰습니다. 특히 무릎을 꿇고 고객 눈높이에 맞춘 "퍼피독(PUPPY
+              DOG)" 서비스는 이후 외식 업계는 물론 항공사 및 전세계 TGI
+              FRIDAYS에서 벤치마킹을 할 정도로 큰 반향을 불러일으켰습니다. 오픈
+              1년만에 1993년 5월 5일 "WORLD DAILY SALES RECORD" 기록을 세우기도
+              하는 등, 고객님께 받은 폭발적인 사랑을 바탕으로, 이후 매년 각종
+              고객만족도 대상을 휩쓸며 대표적인 패밀리 레스토랑으로 자리매김하고
+              있습니다.
             </p>
           </div>
         </li>
@@ -102,10 +108,12 @@
           <div class="txt">
             <h3>World Bartender Championship</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              quo illum eos voluptas corrupti esse rem accusamus excepturi.
-              Incidunt nostrum nihil placeat illum nesciunt ad ratione.
-              Assumenda laborum consectetur aut.
+              TGI FRIDAYS에서는 매년 바텐더 챔피언십이 열립니다. 1991년 처음
+              몇몇의 바텐더끼리 재미로 시작한 경연이 지금은 매년 한자링 모여
+              세계 최고의 TGI FRIDAYS의 바텐더를 뽑는 행사로 커졌습니다. TGI
+              FRIDAYS의 바텐더 챔피언십은 전문성과 즐거움, 혁신적인 음료를
+              경연하는 TGI FRIDAYS의 가장 큰 행사로 자리잡아 전 세계 바텐더들의
+              로망이 되고 있습니다.
             </p>
           </div>
         </li>
@@ -114,10 +122,10 @@
           <div class="txt">
             <h3>TGI FRIDAYS에서 시작한 아이스크림 Blend 음료</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              quo illum eos voluptas corrupti esse rem accusamus excepturi.
-              Incidunt nostrum nihil placeat illum nesciunt ad ratione.
-              Assumenda laborum consectetur aut.
+              ㅣ국은 아이스크림이 들어간 음료의 대중화를 TGI FRIDAYS의 공로로
+              돌리고 있는데 그것은 우리가 알코올 음료와 마티니를 좋아하지 않는
+              많은 손님을 위해 과일, 주스, 아이스크림, 요쿠르트 등을 넣어 만든
+              비알코올 음료를 만들어 왔기 때문입니다.
             </p>
           </div>
         </li>
@@ -126,10 +134,10 @@
           <div class="txt">
             <h3>World Wide TGI FRIDAYS</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              quo illum eos voluptas corrupti esse rem accusamus excepturi.
-              Incidunt nostrum nihil placeat illum nesciunt ad ratione.
-              Assumenda laborum consectetur aut.
+              1965년 창립 이래 47년간 세계 각국에서 성공신화를 써 오고 있는 TGI
+              FRIDAYS! 65개국, 약 1000여개 매장이 운영되고 있습니다. 금요일의
+              활기참을 느끼고 있다면 주위를 둘러보세요! 전 세계 어디에서나 TGI
+              FRIDAYS가 당신을 기다리고 있습니다!
             </p>
           </div>
         </li>
