--- a/store.html
+++ b/store.html
@@ -25,16 +25,38 @@
   </head>
   <body>
     <header>
-      <h1>
-        <a href="index.html"><img src="img/logo.JPG" /></a>
-      </h1>
-      <div class="bar">
-        <a href="#"> <i class="fa-solid fa-bars"></i></a>
+      <div class="headerWrap">
+        <h1>
+          <a href="index.html"><img src="img/logo.JPG" /></a>
+        </h1>
+        <div class="bar">
+          <a href="javascript:;"> <i class="fa-solid fa-bars"></i></a>
+        </div>
+        <ul class="gnb">
+          <li>
+            <a href="story.html">TGI Story</a>
+            <div class="pick"></div>
+          </li>
+          <li>
+            <a href="food.html">FOOD</a>
+            <div class="pick"></div>
+          </li>
+          <li>
+            <a href="bar.html">BAR</a>
+            <div class="pick"></div>
+          </li>
+          <li>
+            <a href="event.html">EVENT</a>
+            <div class="pick"></div>
+          </li>
+          <li>
+            <a href="store.html">STORE</a>
+            <div class="pickon"></div>
+          </li>
+        </ul>
       </div>
-      <ul class="gnb">
-        <li>
-          <a href="story.html">TGI Story</a>
-        </li>
+      <ul class="moGnb">
+        <li><a href="story.html">TGI STORY</a></li>
         <li><a href="food.html">FOOD</a></li>
         <li><a href="bar.html">BAR</a></li>
         <li><a href="event.html">EVENT</a></li>
@@ -162,13 +184,33 @@
           </li>
         </ul>
         <ul class="policy">
-          <li><a href="javascript:;">CAREERS</a></li>
-          <li><a href="javascript:;">GIFT CARDS</a></li>
-          <li><a href="#">ACCESSIBILITY STATEMENT</a></li>
-          <li><a href="javascript:;">PRESS</a></li>
-          <li><a href="javascript:;">CONTACT</a></li>
-          <li><a href="javascript:;">PRIVACY POLICY</a></li>
-          <li><a href="javascript:;">EMAIL SIGNUP</a></li>
+          <li>
+            <a href="javascript:;">CAREERS</a>
+            <div class="pick2"></div>
+          </li>
+          <li>
+            <a href="javascript:;">GIFT CARDS</a>
+            <div class="pick2"></div>
+          </li>
+          <li>
+            <a href="javascript:;">ACCESSIBILITY STATEMENT</a>
+            <div class="pick2"></div>
+          </li>
+          <li>
+            <a href="javascript:;">PRESS</a>
+            <div class="pick2"></div>
+          </li>
+          <li>
+            <a href="javascript:;">CONTACT</a>
+            <div class="pick2"></div>
+          </li>
+          <li>
+            <a href="javascript:;">PRIVACY POLICY</a>
+            <div class="pick2"></div>
+          </li>
+          <li>
+            <a href="javascript:;">EMAIL SIGNUP</a>
+          </li>
         </ul>
       </div>
     </footer>
