--- a/store.html
+++ b/store.html
@@ -66,7 +66,17 @@
     <section id="visual">
       <h2>Store</h2>
     </section>
-    <section id="con1"></section>
+    <section id="con1">
+      <h2>FIND YOUR<br />NEAREST FRIDAYS</h2>
+      <ul>
+        <li><input placeholder="search" /></li>
+        <li class="loca">
+          <a href="javascript:;"
+            >OR UES MY LOCATION <i class="fa-solid fa-location-crosshairs"></i
+          ></a>
+        </li>
+      </ul>
+    </section>
     <section id="popup">
       <img class="stripe1" src="img/stripe.jpg" />
       <ul>
