--- a/store.html
+++ b/store.html
@@ -77,14 +77,15 @@
         </li>
       </ul>
     </section>
-    <section id="popup">
+    <div class="popup popup1">
       <img class="stripe1" src="img/stripe.jpg" />
-      <ul>
+      <ul class="storeInfo">
         <li><img src="img/store_1.jpg" /></li>
         <li>
           <ul class="info">
             <li>
-              <span><i class="fa-solid fa-phone"></i> 전화</span> 02-2218-3970
+              <span><i class="fa-solid fa-phone"></i> 전화</span>
+              02-2218-3970
             </li>
             <li>
               <span><i class="fa-solid fa-location-arrow"></i> 주소</span>
@@ -111,66 +112,303 @@
         </li>
       </ul>
       <img class="stripe2" src="img/stripe.jpg" />
-    </section>
-    <div class="modal"></div>
-    <section id="con2">
-      <ul class="store">
-        <li><img src="img/store_1.jpg" /></li>
-        <li>
-          <h3>롯데백화점 건대스타시티점</h3>
-          <div class="open"><span>영업시간 • </span> 10:30 ~ 21:00</div>
-          <div class="loca">
-            <span>주소 • </span> 서울특별시 광진구 능동로 92
-          </div>
-          <ul class="btn">
-            <li><a href="javascript:;">예약하기</a></li>
-            <li><a href="javascript:;">배달</a></li>
-            <li><a href="javascript:;">상세보기</a></li>
-          </ul>
-        </li>
-      </ul>
-      <ul class="store">
+    </div>
+    <div class="popup popup2">
+      <img class="stripe1" src="img/stripe.jpg" />
+      <ul class="storeInfo">
         <li><img src="img/store_2.jpg" /></li>
         <li>
-          <h3>롯데백화점 김포공항점</h3>
-          <div class="open"><span>영업시간 • </span> 10:30 ~ 22:00</div>
-          <div class="loca">
-            <span>주소 • </span> 서울특별시 강서구 하늘길 38
-          </div>
-          <ul class="btn">
-            <li><a href="javascript:;">예약하기</a></li>
-            <li><a href="javascript:;">배달</a></li>
-            <li><a href="javascript:;">상세보기</a></li>
+          <ul class="info">
+            <li>
+              <span><i class="fa-solid fa-phone"></i> 전화</span>
+              02-6116-5712
+            </li>
+            <li>
+              <span><i class="fa-solid fa-location-arrow"></i> 주소</span>
+              서울특별시 강서구 하늘길 38
+            </li>
+            <li>
+              <span><i class="fa-solid fa-clock"></i> 영업시간</span>
+              10:30 ~ 22:00<br />
+            </li>
+            <li>
+              <span><i class="fa-solid fa-bowl-food"></i> 주문시간</span>
+              ~ 21:00<br />
+            </li>
+            <li>
+              <span><i class="fa-solid fa-calendar"></i> 오픈일</span>
+              2011-12-08<br />
+            </li>
+            <li>
+              <span><i class="fa-solid fa-car"></i> 주차</span>
+              가능 / 몰 주차 이용<br />
+            </li>
           </ul>
+          <button>X</button>
         </li>
       </ul>
-      <ul class="store">
+      <img class="stripe2" src="img/stripe.jpg" />
+    </div>
+    <div class="popup popup3">
+      <img class="stripe1" src="img/stripe.jpg" />
+      <ul class="storeInfo">
         <li><img src="img/store_3.jpg" /></li>
         <li>
-          <h3>롯데백화점 대전점</h3>
-          <div class="open"><span>영업시간 • </span> 10:30 ~ 20:00</div>
-          <div class="loca">
-            <span>주소 • </span> 대전광역시 서구 계룡로 598
-          </div>
-          <ul class="btn">
-            <li><a href="javascript:;">예약하기</a></li>
-            <li><a href="javascript:;">배달</a></li>
-            <li><a href="javascript:;">상세보기</a></li>
+          <ul class="info">
+            <li>
+              <span><i class="fa-solid fa-phone"></i> 전화</span>
+              042-523-2537
+            </li>
+            <li>
+              <span><i class="fa-solid fa-location-arrow"></i> 주소</span>
+              대전광역시 서구 계룡로 598
+            </li>
+            <li>
+              <span><i class="fa-solid fa-clock"></i> 영업시간</span>
+              10:30 ~ 20:00<br />
+            </li>
+            <li>
+              <span><i class="fa-solid fa-bowl-food"></i> 주문시간</span>
+              ~ 19:00<br />
+            </li>
+            <li>
+              <span><i class="fa-solid fa-calendar"></i> 오픈일</span>
+              2006-04-27<br />
+            </li>
+            <li>
+              <span><i class="fa-solid fa-car"></i> 주차</span>
+              가능<br />
+            </li>
           </ul>
+          <button>X</button>
         </li>
       </ul>
-      <ul class="store">
+      <img class="stripe2" src="img/stripe.jpg" />
+    </div>
+    <div class="popup popup4">
+      <img class="stripe1" src="img/stripe.jpg" />
+      <ul class="storeInfo">
         <li><img src="img/store_4.jpg" /></li>
         <li>
-          <h3>롯데백화점 대전점</h3>
-          <div class="open"><span>영업시간 • </span> 10:30 ~ 21:00</div>
-          <div class="loca">
-            <span>주소 • </span> 서울 송파구 올림픽로 240 롯데월드 남문
-          </div>
-          <ul class="btn">
-            <li><a href="javascript:;">예약하기</a></li>
-            <li><a href="javascript:;">배달</a></li>
-            <li><a href="javascript:;">상세보기</a></li>
+          <ul class="info">
+            <li>
+              <span><i class="fa-solid fa-phone"></i> 전화</span>
+              02-2143-1281
+            </li>
+            <li>
+              <span><i class="fa-solid fa-location-arrow"></i> 주소</span>
+              서울 송파구 올림픽로 240 롯데월드 남문
+            </li>
+            <li>
+              <span><i class="fa-solid fa-clock"></i> 영업시간</span>
+              10:30 ~ 21:00<br />
+            </li>
+            <li>
+              <span><i class="fa-solid fa-bowl-food"></i> 주문시간</span>
+              ~ 20:00<br />
+            </li>
+            <li>
+              <span><i class="fa-solid fa-calendar"></i> 오픈일</span>
+              2017-07-14<br />
+            </li>
+            <li>
+              <span><i class="fa-solid fa-car"></i> 주차</span>
+              불가능<br />
+            </li>
+          </ul>
+          <button>X</button>
+        </li>
+      </ul>
+      <img class="stripe2" src="img/stripe.jpg" />
+    </div>
+    <div class="modal"></div>
+    <section id="con2">
+      <ul class="pageWrap">
+        <li>
+          <ul class="store page1">
+            <li><img src="img/store_1.jpg" /></li>
+            <li>
+              <h3>롯데백화점 건대스타시티점</h3>
+              <div class="open"><span>영업시간 • </span> 10:30 ~ 21:00</div>
+              <div class="loca">
+                <span>주소 • </span> 서울특별시 광진구 능동로 92
+              </div>
+              <ul class="btn">
+                <li><a href="javascript:;">예약하기</a></li>
+                <li><a href="javascript:;">배달</a></li>
+                <li><a href="javascript:;">상세보기</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="store page2">
+            <li><img src="img/store_2.jpg" /></li>
+            <li>
+              <h3>롯데백화점 김포공항점</h3>
+              <div class="open"><span>영업시간 • </span> 10:30 ~ 22:00</div>
+              <div class="loca">
+                <span>주소 • </span> 서울특별시 강서구 하늘길 38
+              </div>
+              <ul class="btn">
+                <li><a href="javascript:;">예약하기</a></li>
+                <li><a href="javascript:;">배달</a></li>
+                <li><a href="javascript:;">상세보기</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="store page3">
+            <li><img src="img/store_3.jpg" /></li>
+            <li>
+              <h3>롯데백화점 대전점</h3>
+              <div class="open"><span>영업시간 • </span> 10:30 ~ 20:00</div>
+              <div class="loca">
+                <span>주소 • </span> 대전광역시 서구 계룡로 598
+              </div>
+              <ul class="btn page4">
+                <li><a href="javascript:;">예약하기</a></li>
+                <li><a href="javascript:;">배달</a></li>
+                <li><a href="javascript:;">상세보기</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="store page4">
+            <li><img src="img/store_4.jpg" /></li>
+            <li>
+              <h3>롯데월드점</h3>
+              <div class="open"><span>영업시간 • </span> 10:30 ~ 21:00</div>
+              <div class="loca">
+                <span>주소 • </span> 서울 송파구 올림픽로 240 롯데월드 남문
+              </div>
+              <ul class="btn">
+                <li><a href="javascript:;">예약하기</a></li>
+                <li><a href="javascript:;">배달</a></li>
+                <li><a href="javascript:;">상세보기</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <ul class="store">
+            <li><img src="img/store_5.jpg" /></li>
+            <li>
+              <h3>롯데백화점 평촌점</h3>
+              <div class="open"><span>영업시간 • </span> 10:30 ~ 21:00</div>
+              <div class="loca">
+                <span>주소 • </span> 경기도 안양시 동안구 시민대로 180
+              </div>
+              <ul class="btn">
+                <li><a href="javascript:;">예약하기</a></li>
+                <li><a href="javascript:;">배달</a></li>
+                <li><a href="javascript:;">상세보기</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="store">
+            <li><img src="img/store_6.jpg" /></li>
+            <li>
+              <h3>롯데몰 수지점</h3>
+              <div class="open"><span>영업시간 • </span> 10:30 ~ 22:00</div>
+              <div class="loca">
+                <span>주소 • </span> 경기 용인시 수지구 성복2로 롯데몰수지점 4층
+              </div>
+              <ul class="btn">
+                <li><a href="javascript:;">예약하기</a></li>
+                <li><a href="javascript:;">배달</a></li>
+                <li><a href="javascript:;">상세보기</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="store">
+            <li><img src="img/store_7.jpg" /></li>
+            <li>
+              <h3>롯데백화점 노원점</h3>
+              <div class="open"><span>영업시간 • </span> 10:30 ~ 20:00</div>
+              <div class="loca">
+                <span>주소 • </span> 서울특별시 노원구 동일로 1414
+              </div>
+              <ul class="btn">
+                <li><a href="javascript:;">예약하기</a></li>
+                <li><a href="javascript:;">배달</a></li>
+                <li><a href="javascript:;">상세보기</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="store">
+            <li><img src="img/store_8.jpg" /></li>
+            <li>
+              <h3>롯데백화점 일산점</h3>
+              <div class="open"><span>영업시간 • </span> 10:30 ~ 21:00</div>
+              <div class="loca">
+                <span>주소 • </span> 경기도 고양시 일산동구 중앙로 1283
+              </div>
+              <ul class="btn">
+                <li><a href="javascript:;">예약하기</a></li>
+                <li><a href="javascript:;">배달</a></li>
+                <li><a href="javascript:;">상세보기</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <ul class="store">
+            <li><img src="img/store_9.jpg" /></li>
+            <li>
+              <h3>롯데백화점 부산본점</h3>
+              <div class="open"><span>영업시간 • </span> 10:30 ~ 21:00</div>
+              <div class="loca">
+                <span>주소 • </span> 부산광역시 부산진구 가야대로 772,
+                롯데백화점 9층
+              </div>
+              <ul class="btn">
+                <li><a href="javascript:;">예약하기</a></li>
+                <li><a href="javascript:;">배달</a></li>
+                <li><a href="javascript:;">상세보기</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="store">
+            <li><img src="img/store_10.jpg" /></li>
+            <li>
+              <h3>롯데몰 파주점</h3>
+              <div class="open"><span>영업시간 • </span> 10:30 ~ 22:00</div>
+              <div class="loca">
+                <span>주소 • </span> 경기 파주시 회동길 롯데프리미엄 아울렛 3층
+              </div>
+              <ul class="btn">
+                <li><a href="javascript:;">예약하기</a></li>
+                <li><a href="javascript:;">배달</a></li>
+                <li><a href="javascript:;">상세보기</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="store">
+            <li><img src="img/store_11.jpg" /></li>
+            <li>
+              <h3>롯데백화점 잠실점</h3>
+              <div class="open"><span>영업시간 • </span> 10:30 ~ 20:00</div>
+              <div class="loca">
+                <span>주소 • </span> 서울특별시 송파구 올림픽로 240
+              </div>
+              <ul class="btn">
+                <li><a href="javascript:;">예약하기</a></li>
+                <li><a href="javascript:;">배달</a></li>
+                <li><a href="javascript:;">상세보기</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="store">
+            <li><img src="img/store_12.jpg" /></li>
+            <li>
+              <h3>현대시티아울렛 대구점</h3>
+              <div class="open"><span>영업시간 • </span> 10:30 ~ 21:00</div>
+              <div class="loca">
+                <span>주소 • </span> 대구 동구 동대구로 454 현대시티아울렛 8층
+              </div>
+              <ul class="btn">
+                <li><a href="javascript:;">예약하기</a></li>
+                <li><a href="javascript:;">배달</a></li>
+                <li><a href="javascript:;">상세보기</a></li>
+              </ul>
+            </li>
           </ul>
         </li>
       </ul>
@@ -179,7 +417,6 @@
       <li class="on"><a href="javascript:;">1</a></li>
       <li><a href="javascript:;">2</a></li>
       <li><a href="javascript:;">3</a></li>
-      <li><a href="javascript:;">4</a></li>
     </ul>
     <footer>
       <h3>FOLLOW US</h3>
