--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </ul>
     </section>
     <section id="con2">
-      <ul>
+      <ul class="foodList">
         <li>
           <img src="img/index_con2_1.png" />
         </li>
@@ -124,28 +124,54 @@
       </ul>
       <div class="prev"><i class="fa-solid fa-chevron-left"></i></div>
       <div class="next"><i class="fa-solid fa-chevron-right"></i></div>
-      <div class="con2txt">
-        <h4>프라이데이스 쓰리 포 올</h4>
-        <p>
-          뉴욕 스타일의 버팔로 윙, 수제프라이드 모짜렐라 치즈스틱,<br />체다
-          치즈 포테이토 스킨을 함께 즐길 수 있는<br />티지아이 프라이데이스의
-          시그니처 에피타이저
-        </p>
-        <div><a href="food.html">VIEW MORE +</a></div>
-      </div>
+      <ul class="con2txt">
+        <li>
+          <h4>뉴욕 스트립 스테이크 & 슈림프 콤보</h4>
+          <p>
+            풍미 가득한 육즙과 티지아이 프라이데이스만의<br />시즈닝으로 맛을
+            더한 뉴욕 주 모양의 고급 채끝 스테이크와<br />바삭하게 튀겨준 케이준
+            슈림프를 함께 즐기는 스테이크 콤보
+          </p>
+          <div><a href="food.html">VIEW MORE +</a></div>
+        </li>
+        <li>
+          <h4>프라이데이스 쓰리 포 올</h4>
+          <p>
+            뉴욕 스타일의 버팔로 윙, 수제프라이드 모짜렐라 치즈스틱,<br />체다
+            치즈 포테이토 스킨을 함께 즐길 수 있는<br />티지아이 프라이데이스의
+            시그니처 에피타이저
+          </p>
+          <div><a href="food.html">VIEW MORE +</a></div>
+        </li>
+        <li>
+          <h4>시그니처 글레이즈드 립</h4>
+          <p>
+            육질이 부드럽고 두툼한 바비큐 폭립에 티지아이 프라이데이스만의<br />시그니처
+            글레이즈드 특제 소스를 발라 구워낸<br />오리지널 뉴욕의 맛을 느낄 수
+            있는 시그니처 립
+          </p>
+          <div><a href="food.html">VIEW MORE +</a></div>
+        </li>
+      </ul>
     </section>
     <section id="con3">
       <h4>THANKS GOD</h4>
       <h3>IT'S <span>FRIDAYS</span></h3>
       <ul>
         <li>
-          <a href="event.html"><img src="img/index_con3_1.jpg" /></a>
+          <a href="event.html"
+            ><div class="imgBox"><img src="img/index_con3_1.jpg" /></div
+          ></a>
         </li>
         <li>
-          <a href="event.html"><img src="img/index_con3_2.png" /></a>
+          <a href="event.html"
+            ><div class="imgBox"><img src="img/index_con3_2.png" /></div
+          ></a>
         </li>
         <li>
-          <a href="event.html"><img src="img/index_con3_3.jpg" /></a>
+          <a href="event.html"
+            ><div class="imgBox"><img src="img/index_con3_3.jpg" /></div
+          ></a>
         </li>
       </ul>
     </section>
